Made visualizer stretch further to avoid excess whitespace

--- a/src/app/widgets/Visualizer/index.styl
+++ b/src/app/widgets/Visualizer/index.styl
@@ -23,3 +23,10 @@
     flex-direction column;
     flex-grow: 1;
 }
+
+.flex-grow {
+    display: flex;
+    flex-grow: 1;
+    flex-direction column;
+    margin-bottom: 2em;
+}
